--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Book Now-Eventen</title>
+  <title>Page not found-Eventen</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -178,147 +178,38 @@
   </div>
   <div class="container">
     <div class="page-title text-center position-relative py-11">
-     <h2 class="text-white">Book Tickets Now</h2>
+     <h2 class="text-white">404 Error</h2>
     </div> 
   </div>
 </section>
-<!--Banner Section end-->
+<!--Banner Section end--> 
 
-<!--Book now Section start-->
-<section class="ticket-booking">
+<!--Error Section start--> 
+<section class="error position-relative">
   <div class="container">
-    <div class="booking-form w-lg-75 m-auto px-2">
-      <div class="form-title mb-4">
-        <h2 class="mb-2"><span class="pink">Event</span> Booking Form</h2>
-        <p>Book your tickets to the event now!!</p>
+    <div class="overlay"></div>
+    <div class="inner-error text-center position-relative">
+      <div class="error-heading mb-4">
+        <h1 class="mb-4 text-white">OOOPS.</h1>
+        <h4 class="pink">The page you were looking for couldn't be found.</h4>
+      </div>  
+      <div class='line-container py-4'>
+        <div class='line-icon text-blue align-items-center'><i class="fa fa-star-o" aria-hidden="true"></i></div>
       </div>
-      <div class="form-content">
-        <form>
-          <div class="name-email">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="name">
-                  <label for="full-name" class="mb-2">Full Name:</label>
-                  <input type="text" placeholder="Full Name"  id="full-name" class="py-4 mb-4" required>
-                </div>
-              </div>  
-              <div class="col-lg-6">
-                <div class="name">
-                  <label for="email" class="mb-2">Email:</label>
-                  <input type="email" placeholder="Email Address" id="email" class="py-4 mb-4" required>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="phone-address">
-            <div class=" row justify-content-around"> 
-              <div class="col-lg-6 col-md-6">
-                <div class="phone-no">
-                  <label for="phone" class="mb-2">Phone No:</label>
-                  <input type="tel" placeholder="Phone No." id="phone" class="py-4 mb-4" required>
-                </div>  
-              </div>  
-              <div class="col-lg-6 col-md-6">
-                <div class="address">
-                  <label for="address" class="mb-2">Address:</label>
-                  <input type="text" placeholder="Address" id="address" class="py-4 mb-4">
-                </div>  
-              </div>  
-            </div>
-          </div>  
-          <div class="event-date-textarea">
-            <div class="row">
-              <div class="col-lg-6 col-md-6">
-                <div class="event-list">
-                  <label for="event-list" class="mb-2 mb-4">Events:</label>
-                  <select id="event-list" class="py-4 mb-4" required>
-                    <option value="">--Please choose an preffered event--</option>
-                    <option value="1">Event-1</option>
-                    <option value="2">Event-2</option>
-                    <option value="3">Event-3</option>
-                    <option value="3">Event-4</option>
-                  </select>
-                </div>
-                <div class="event-date">
-                  <label for="event-date" class="mb-2">Event Date:</label>
-                  <input type="date" id="event-date" name="eventdate" class="py-4 mb-4" required>
-                </div>
-                <div class="attendee-no">
-                  <label for="attendee" class="mb-2">No of Attendee:</label>
-                  <select id="attendee" class="py-4 mb-4"  required>
-                    <option value="">--Please select no of attendee--</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="3">4</option>
-                    <option value="3">5</option>
-                  </select>
-                </div>    
-              </div>
-              <div class="col-lg-6 col-md-6">
-                <div class="textarea">
-                  <textarea placeholder="Any message you want to add?" class="py-4" rows="10"></textarea>
-                </div>
-              </div>
-            </div>  
-          </div>
-          <button class="btn"  id="sub-btn">Book Now</button>
-        </form> 
+      <div class="search">
+        <p class="mb-4">You can navigate through our menu or use this search bar:</p>
+        <!-- <div class="searchbar d-flex justify-content-center">
+          <input type="search" id="form1" class=" mb-0 w-lg-50 rounded-end-0 " placeholder="Search...">
+              <button type="button" class="btn rounded-start-0" data-mdb-ripple-init>
+                <i class="fa fa-search"></i>
+              </button>
+        </div>       -->
       </div>
     </div>
   </div>
 </section>
-<!--Book now Section end-->
+<!--Error Section end--> 
 
-<!--Direction Section start-->
-<section class="direction bg-lightgrey">
-  <div class="container">
-    <div class="section-title text-center pb-2 w-lg-60 m-auto">
-      <p class="mb-1  pink">REACH US</p>
-      <h2 class="mb-1">GET DIRECTION TO THE <span class="pink">EVENT HALL</span></h2>
-      <p class="mb-0">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-        id est laborum.
-      </p>
-    </div>
-    <div class="direction-content">
-      <div class="direction-info">
-        <div class="row">
-          <div class="col-lg-5 col-md-5 px-1">
-            <div class="p-6 d-flex text-white w-100 h-100 rounded bg-pink ">
-              <div class="justify-content-center align-self-center ms-6">
-                <h5 class="text-white pb-2">EVENT VENUE:</h5>
-                <p class="pb-5 m-0">Galleria mall conference center</p>
-                <h5 class="text-white pb-2">ADDRESS:</h5>
-                <p class="pb-5 m-0">19 By Pass NR, Bali, Indonesia, BC 22196</p>
-                <h5 class="text-white pb-2">RECEPTION INFO:</h5>
-                <p class="pb-5 m-0">Booking: (+62) 1919-2020</p>
-                <a>Get Directions</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-7 col-md-7 px-1 py-2">
-            <iframe height="400" class="rounded w-100"
-              src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=+(mangal%20bazar)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-          </div>
-        </div>
-      </div>
-      <div class="location-gallery">
-        <div id="selector" class="row pt-1 justify-content-center">
-          <div class="item col-lg-4 col-md-6 p-1" data-src="images/group/4.jpg">
-            <a><img src="images/thumbnail/4.jpg" class="w-100 rounded" alt="VR Presentation and conference"></a>
-          </div>
-          <div class="item col-lg-4 col-md-6 p-1" data-src="images/group/7.jpg">
-            <a><img src="images/thumbnail/7.jpg" class="w-100 rounded" alt="VR Presentation and conference"></a>
-          </div>
-          <div class="item col-lg-4 col-md-6 p-1" data-src="images/group/1.jpg">
-            <a><img src="images/thumbnail/1.jpg" class="w-100 rounded" alt="VR Presentation and conference"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!--Direction Section end-->
 
 <!--Subscribe Section start-->
 <section class="subscribe py-4">
@@ -409,12 +300,10 @@
 <!--Footer Section end-->  
 
 <!--Bacl-to-top Button start-->
- <div id="back-to-top">
+<div id="back-to-top">
   <a href="#" class="bg-pink position-relative align-items-center rounded-circle d-block"></a>
- </div>
+</div>
 <!--Bacl-to-top Button end-->
-
-
 
     <script src="js/jquery-3.7.1.min.js"></script>  
     <script src="js/bootstrap.bundle.min.js"></script>
