--- a/prereg.html
+++ b/prereg.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Page not found-Eventen</title>
+  <title>Pre-Registration | DealToAir</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -37,16 +37,16 @@
                     <i class="fa fa-facebook border-social rounded-circle text-center"></i>
                   </a>               
                 </li>
-                <li class="d-inline">
+                <!-- <li class="d-inline">
                   <a href="#">
                     <i class="fa fa-twitter border-social rounded-circle text-center"></i>
                   </a>
-                </li>
-                <li class="d-inline">
+                </li> -->
+                <!-- <li class="d-inline">
                   <a href="#">
                     <i class="fa fa-google border-social rounded-circle text-center"></i>
                   </a>
-                </li>
+                </li> -->
                 <li class="d-inline">
                   <a href="#">
                     <i class="fa fa-instagram border-social rounded-circle text-center"></i>
@@ -54,7 +54,7 @@
                 </li>
                 <li class="d-inline">
                   <a href="#">
-                    <i class="fa fa-youtube-play border-social rounded-circle text-center "></i>
+                    <i class="fa fa-linkedin border-social rounded-circle text-center "></i>
                   </a>
                 </li>
               </ul>
@@ -90,7 +90,7 @@
               <a href="./"><img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100"></a>
             </div>
           </div>  
-          <div class="col-lg-10 col-md-6">
+          <!-- <div class="col-lg-10 col-md-6">
             <div class="collapse navbar-collapse justify-content-between ms-8 " id="bs-example-navbar-collapse-1">
               <ul class="navbar-nav align-items-center" id="responsive-menu">
                 <li class="nav-item ">
@@ -154,7 +154,7 @@
                   <a class="btn btn3" href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
               </div>
               </div>  
-            </div>
+            </div> -->
         <div id="slicknav-mobile"></div>
         </div>
       </nav>
@@ -178,126 +178,125 @@
   </div>
   <div class="container">
     <div class="page-title text-center position-relative py-11">
-     <h2 class="text-white">404 Error</h2>
+     <h2 class="text-white">Fill Out Form and Win Prizes 🎯🏆👇</h2>
     </div> 
   </div>
 </section>
 <!--Banner Section end--> 
-
-<!--Error Section start--> 
-<section class="error position-relative">
-  <div class="container">
-    <div class="overlay"></div>
-    <div class="inner-error text-center position-relative">
-      <div class="error-heading mb-4">
-        <h1 class="mb-4 text-white">OOOPS.</h1>
-        <h4 class="pink">The page you were looking for couldn't be found.</h4>
-      </div>  
-      <div class='line-container py-4'>
-        <div class='line-icon text-blue align-items-center'><i class="fa fa-star-o" aria-hidden="true"></i></div>
-      </div>
-      <div class="search">
-        <p class="mb-4">You can navigate through our menu or use this search bar:</p>
-        <div class="searchbar d-flex justify-content-center">
-          <input type="search" id="form1" class=" mb-0 w-lg-50 rounded-end-0 " placeholder="Search...">
-              <button type="button" class="btn rounded-start-0" data-mdb-ripple-init>
-                <i class="fa fa-search"></i>
-              </button>
-        </div>      
-      </div>
+  <section class="faq pb-0 overflow-visible d-block position-relative z-1">
+    <div class="overlay bg-opacity-25  z-n1">
     </div>
-  </div>
-</section>
-<!--Error Section end--> 
-
-
-<!--Subscribe Section start-->
-<section class="subscribe py-4">
-  <div class="container">
-    <div class="subscribe-content">
-      <div class="row">
-        <div class="col-lg-6 align-self-center ">
-          <div class="sub-left text-center text-lg-start py-2">
-            <h4 class="text-white ">DON'T MISS OUR FUTURE UPDATES! GET SUBSCRIBED TODAY!</h4>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="sub-right py-2">
-            <p class="text-white mb-4 text-center text-lg-start"> Excepteur sint occaecat cupidatat non proident, sunt
-              in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="row gy-3">
-              <div class="col-lg-8 col-md-8 ">
-                <div class="sub-email">
-                  <input type="email" placeholder="Email" required>
+    <div class="container">
+      <div>
+        <div class="row mb-5">
+          <div class="col-lg-6">
+            <div class="overview-img">
+              <div class="row align-items-center">
+                <div class="col-lg-6 col-md-6 p-0 ">
+                  <div class="container-img-left mb-2">
+                    <div class="img-left-1 float-end w-lg-80">
+                      <img class="mb-2 w-100 rounded" src="images/group/1.jpg" alt="group-image">
+                    </div>
+                    <div class="img-left-2">
+                      <img src="images/group/2.jpg" alt="group-image" class="w-100 rounded">
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-4 col-md-4">
-                <div class="sub-button">
-                  <button class="btn btn3 w-100">SUBSCRIBE</button>
+                <div class="col-lg-6 col-md-6">
+                  <div class="container-img-right w-lg-75">
+                    <img src="images/group/3.jpg" alt="group-image" class="w-100 rounded">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <div class="col-lg-6  align-self-center px-4">
+            <div class="faq-form bg-white rounded shadow-lg p-6 mb-mi">
+              <div class="form-title mb-4">
+                <p class="mb-1 pink">TICKET BOOK</p>
+                <h2 class="mb-2">LET'S RESERVE A <span class="pink">SEAT</span></h2>
+                <p class="m-0">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                  anim id est laborum.</p>
+              </div>
+              <div class="form-content justify-content-between">
+                <form>
+                  <input type="text" placeholder="Full Name" class="mb-5">
+                  <div class=" row justify-content-around">
+                    <div class="col-lg-6 col-md-6">
+                      <div class="phone-no">
+                        <input type="tel" placeholder="Phone No." class="mb-5">
+                      </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                      <div class="emai">
+                        <input type="email" placeholder="Email Address" class="mb-5" required>
+                      </div>
+                    </div>
+                  </div>
+                  <textarea placeholder="How may we help you?" rows="4" class="mb-5"></textarea>
+                  <button class="btn mb-5" id="sub-btn">SEND MESSAGE</button>
+                </form>
+                <small>*Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero hic facere, minima impedit ea
+                  quasi nemo odio.</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="feature-lists pt-8 pb-8">
+          <div class="row g-4">
+            <div class="col-lg-4 col-md-6">
+              <div class="feature-box py-7 px-6 rounded text bg-black bg-opacity-25">
+                <a>
+                  <div class="feature-box-icon mb-4">
+                    <i class="fa fa-address-book-o text-white bg-pink rounded-circle text-center"></i>
+                  </div>
+                  <div class="feature-box-info ">
+                    <h5 class="text-white mb-2">LIVE STREAMING</h5>
+                    <small class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore.</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="feature-box py-7 px-6 rounded  bg-black bg-opacity-25">
+                <a>
+                  <div class="feature-box-icon mb-4">
+                    <i class="fa fa-comments text-white bg-pink rounded-circle text-center"></i>
+                  </div>
+                  <div class="feature-box-info">
+                    <h5 class="text-white mb-2">FIRESIDE CHATS</h5>
+                    <small class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore.</small>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="feature-box py-7 px-6 rounded bg-black bg-opacity-25">
+                <a>
+                  <div class="feature-box-icon mb-4">
+                    <i class="fa fa-desktop text-white bg-pink rounded-circle text-center"></i>
+                  </div>
+                  <div class="feature-box-info">
+                    <h5 class="text-white mb-2">NETWORKING</h5>
+                    <small class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore.</small>
+                  </div>
+                </a>
+              </div>
+            </div>         
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
-<!--Subscribe Section end-->
+  </section>
 
-<!--Footer Section start-->
-<footer class="pt-9 text-center text-white position-relative z-1">
-  <div class="overlay z-n1 start-0"></div>
-  <div class="container">
-    <div class="footer-content w-lg-50 m-auto">
-      <div class="footer-logo mb-4 pt-1">
-        <a href="index.html"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
-      </div>
-      <div class="footer-disciption border-bottom border-white border-opacity-25 m-auto mb-6">
-        <p class=" mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore.</p>
-        <div class="footer-socials pb-6">
-          <ul class="m-0 p-0">
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-youtube-play"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-menu pb-9">
-        <ul class="p-0 m-0">
-          <li class="d-inline mx-2"><a href="about.html"><small>About Event</small></a></li>
-          <li class="d-inline mx-2"><a href=""><small>Services</small></a></li>
-          <li class="d-inline mx-2"><a href="speaker_list.html"><small>Speakers</small></a></li>
-          <li class="d-inline mx-2"><a href="event_list.html"><small>Schedule</small></a></li>
-          <li class="d-inline mx-2"><a href="pricing.html"><small>Ticket Pricing</small></a></li>
-          <li class="d-inline mx-2"><a href="contact.html"><small>Contact Us</small></a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="copyright pb-6 pt-1">
-      <small>Copyright &#169;2024 Eventen. All Rights Reserved Copyright</small>
-    </div>
-  </div>
-</footer>
-<!--Footer Section end-->  
+
+
+
+
+
 
 <!--Bacl-to-top Button start-->
 <div id="back-to-top">
