--- a/coreg.html
+++ b/coreg.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Page not found-Eventen</title>
+  <title>Co-Registration | DealtoAir</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -90,7 +90,7 @@
               <a href="./"><img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100"></a>
             </div>
           </div>  
-          <div class="col-lg-10 col-md-6">
+          <!-- <div class="col-lg-10 col-md-6">
             <div class="collapse navbar-collapse justify-content-between ms-8 " id="bs-example-navbar-collapse-1">
               <ul class="navbar-nav align-items-center" id="responsive-menu">
                 <li class="nav-item ">
@@ -154,7 +154,7 @@
                   <a class="btn btn3" href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
               </div>
               </div>  
-            </div>
+            </div> -->
         <div id="slicknav-mobile"></div>
         </div>
       </nav>
@@ -171,69 +171,47 @@
   <!-- Navigation Bar Ends -->
 </header>
 <!-- Header section ends -->
-
-<!-- Bannner section starts -->
-<section class="banner page-banner position-relative pb-0">
-  <div class="overlay">
-  </div>
-  <div class="container">
-    <div class="page-title text-center position-relative py-11">
-     <h2 class="text-white">404 Error</h2>
-    </div> 
-  </div>
-</section>
-<!--Banner Section end--> 
-
-<!--Error Section start--> 
-<section class="error position-relative">
-  <div class="container">
-    <div class="overlay"></div>
-    <div class="inner-error text-center position-relative">
-      <div class="error-heading mb-4">
-        <h1 class="mb-4 text-white">OOOPS.</h1>
-        <h4 class="pink">The page you were looking for couldn't be found.</h4>
-      </div>  
-      <div class='line-container py-4'>
-        <div class='line-icon text-blue align-items-center'><i class="fa fa-star-o" aria-hidden="true"></i></div>
-      </div>
-      <div class="search">
-        <p class="mb-4">You can navigate through our menu or use this search bar:</p>
-        <div class="searchbar d-flex justify-content-center">
-          <input type="search" id="form1" class=" mb-0 w-lg-50 rounded-end-0 " placeholder="Search...">
-              <button type="button" class="btn rounded-start-0" data-mdb-ripple-init>
-                <i class="fa fa-search"></i>
-              </button>
-        </div>      
-      </div>
+ <section class="banner position-relative pb-0">
+    <div class="overlay">
     </div>
-  </div>
-</section>
-<!--Error Section end--> 
-
-
-<!--Subscribe Section start-->
-<section class="subscribe py-4">
-  <div class="container">
-    <div class="subscribe-content">
-      <div class="row">
-        <div class="col-lg-6 align-self-center ">
-          <div class="sub-left text-center text-lg-start py-2">
-            <h4 class="text-white ">DON'T MISS OUR FUTURE UPDATES! GET SUBSCRIBED TODAY!</h4>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="sub-right py-2">
-            <p class="text-white mb-4 text-center text-lg-start"> Excepteur sint occaecat cupidatat non proident, sunt
-              in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <div class="row gy-3">
-              <div class="col-lg-8 col-md-8 ">
-                <div class="sub-email">
-                  <input type="email" placeholder="Email" required>
-                </div>
+    <div class="container">
+      <div class="inner-banner position-relative text-white ">
+        <div class="row">
+          <div class="col-lg-6 order-2 order-lg-1">
+            <div class="banner-left text-center pb-lg-5 p-md-0">
+              <div class="banner-image">
+                <img src="images/team/4.png" alt="banner-image" class="w-50"><br>
               </div>
-              <div class="col-lg-4 col-md-4">
-                <div class="sub-button">
-                  <button class="btn btn3 w-100">SUBSCRIBE</button>
+            </div>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2">
+            <div class="banner-right  ms-2 text-center text-lg-start pb-8">
+              <div class="banner-title pb-3">
+                <h4 class="text-white pb-3">UPCOMING NEW <span class="pink">EVENT</span> 2023</h4>
+                <h1 class="text-white">STARTUP <span class="pink">GLOBAL</span> CONFERENCE</h1>
+              </div>
+              <div class="banner-event-info pb-3">
+                <ul class="m-0 ps-0 d-sm-flex justify-content-center justify-content-lg-start list-unstyled">
+                  <li class="pe-2 border-end border-1 border-lightgrey">
+                    <i class="fa  fa-calendar-o pe-1"></i> 22-24 MAY 2024
+                  </li>
+                  <li class="ps-2">
+                    <i class="fa  fa-map-marker pe-1"></i> QUEENBAY MALL 4217 ROAD, USA
+                  </li>
+                </ul>
+              </div>
+              <div class="event-discription">
+                <p class="pb-4 m-0">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</p>
+                <div class="banner-button">
+                  <div class="row">
+                    <div class="col-lg-6 col-md-6">
+                      <a class="btn me-3 my-1 w-100" href="book-now.html">PURCHASE TICKET</a>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                      <a class="btn btn2 my-1 w-100" href="event_list.html">VIEW SCHEDULE</a>
+                    </div> 
+                  </div>
                 </div>
               </div>
             </div>
@@ -241,63 +219,20 @@
         </div>
       </div>
     </div>
-  </div>
-</section>
-<!--Subscribe Section end-->
+    <!-- <div class="wave overflow-hidden position-absolute w-100 z-0">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none"
+        class="d-block position-relative">
+        <path class="elementor-shape-fill" d="M790.5,93.1c-59.3-5.3-116.8-18-192.6-50c-29.6-12.7-76.9-31-100.5-35.9c-23.6-4.9-52.6-7.8-75.5-5.3
+          c-10.2,1.1-22.6,1.4-50.1,7.4c-27.2,6.3-58.2,16.6-79.4,24.7c-41.3,15.9-94.9,21.9-134,22.6C72,58.2,0,25.8,0,25.8V100h1000V65.3
+          c0,0-51.5,19.4-106.2,25.7C839.5,97,814.1,95.2,790.5,93.1z"></path>
+      </svg>
+    </div> -->
+  </section>
 
-<!--Footer Section start-->
-<footer class="pt-9 text-center text-white position-relative z-1">
-  <div class="overlay z-n1 start-0"></div>
-  <div class="container">
-    <div class="footer-content w-lg-50 m-auto">
-      <div class="footer-logo mb-4 pt-1">
-        <a href="index.html"><img src="images/logo/Dealtoair_Logo.png" class="w-50" alt="footer-logo"></a>
-      </div>
-      <div class="footer-disciption border-bottom border-white border-opacity-25 m-auto mb-6">
-        <p class=" mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore.</p>
-        <div class="footer-socials pb-6">
-          <ul class="m-0 p-0">
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-facebook"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-twitter"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-youtube-play"></i>
-              </a>
-            </li>
-            <li class="d-inline me-2">
-              <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                <i class="fa fa-linkedin"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-menu pb-9">
-        <ul class="p-0 m-0">
-          <li class="d-inline mx-2"><a href="about.html"><small>About Event</small></a></li>
-          <li class="d-inline mx-2"><a href=""><small>Services</small></a></li>
-          <li class="d-inline mx-2"><a href="speaker_list.html"><small>Speakers</small></a></li>
-          <li class="d-inline mx-2"><a href="event_list.html"><small>Schedule</small></a></li>
-          <li class="d-inline mx-2"><a href="pricing.html"><small>Ticket Pricing</small></a></li>
-          <li class="d-inline mx-2"><a href="contact.html"><small>Contact Us</small></a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="copyright pb-6 pt-1">
-      <small>Copyright &#169;2024 Eventen. All Rights Reserved Copyright</small>
-    </div>
-  </div>
-</footer>
-<!--Footer Section end-->  
+
+
+
+
 
 <!--Bacl-to-top Button start-->
 <div id="back-to-top">
