--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
                       <i class="fa fa-facebook border-social rounded-circle text-center"></i>
                     </a>
                   </li>
-                  <li class="d-inline">
+                  <!-- <li class="d-inline">
                     <a href="#">
                       <i class="fa fa-twitter border-social rounded-circle text-center"></i>
                     </a>
-                  </li>
-                  <li class="d-inline">
+                  </li> -->
+                  <!-- <li class="d-inline">
                     <a href="#">
                       <i class="fa fa-google border-social rounded-circle text-center"></i>
                     </a>
-                  </li>
+                  </li> -->
                   <li class="d-inline">
                     <a href="#">
                       <i class="fa fa-instagram border-social rounded-circle text-center"></i>
@@ -56,7 +56,7 @@
                   </li>
                   <li class="d-inline">
                     <a href="#">
-                      <i class="fa fa-youtube-play border-social rounded-circle text-center "></i>
+                      <i class="fa fa-linkedin border-social rounded-circle text-center "></i>
                     </a>
                   </li>
                 </ul>
@@ -91,11 +91,11 @@
         <nav class="navbar navbar-expand-lg py-2">
           <div class="row">
             <div class="col-lg-2 col-md-6">
-              <div class="navbar-brand m-0">
-                <img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100">
-              </div>
+            <div class="navbar-brand m-0">
+              <a href="./"><img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100"></a>
             </div>
-            <div class="col-lg-7 col-md-6 ">
+          </div>
+            <!-- <div class="col-lg-7 col-md-6 ">
               <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                 <ul class="navbar-nav align-items-center" id="responsive-menu">
                   <li class="nav-item ">
@@ -173,15 +173,15 @@
                   </li>
                 </ul>
               </div>
-            </div>
-            <div class="col-lg-3">
+            </div> -->
+            <!-- <div class="col-lg-3">
               <div class="menu-search">
                 <a href="#search1" class="mt_search">
                   <i class="fa fa-search fa-lg me-5 text-white"></i>
                 </a>
-                <a class="btn btn3" href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
+                <a class="btn btn3"  href="book-now.html">Buy Ticket<i class="fa fa-long-arrow-right ms-4"></i></a>
               </div>
-            </div>
+            </div> -->
             <div id="slicknav-mobile"></div>
           </div>
         </nav>
@@ -560,7 +560,7 @@
   <!--Features Section end-->
 
   <!--Speakers Section Start-->
-  <section class="speakers">
+  <!-- <section class="speakers">
     <div class="container">
       <div class="speaker-inner">
         <div class="speaker-title text-center p-2">
@@ -658,11 +658,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Speakers Section end-->
 
   <!--Ticketbook Section start-->
-  <section class="ticket position-relative">
+  <!-- <section class="ticket position-relative">
     <div class="overlay">
     </div>
     <div class="container">
@@ -686,11 +686,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Ticketbook Section end-->
 
   <!--Schedules Section start-->
-  <section class="schedules">
+  <!-- <section class="schedules">
     <div class="container">
       <div class="schedule-inner">
         <div class="schedule-title text-center mb-6 w-lg-60 mx-auto">
@@ -838,11 +838,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Schedules Section end-->
 
   <!--Pricing Section start-->
-  <section class="price bg-lightgrey">
+  <!-- <section class="price bg-lightgrey">
     <div class="container">
       <div class="price-inner text-center">
         <div class="price-title mb-7 w-lg-60 m-auto">
@@ -975,11 +975,11 @@
         <p class="m-0">All prices exclude 25% VAT. For more details, view our <a class="pink">Terms & Policy</a></p>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Pricing Section end-->
 
   <!--Gallery Section end-->
-  <section class="gallery">
+  <!-- <section class="gallery">
     <div class="container">
       <div class="galler-inner">
         <div class="section-title text-center">
@@ -1023,7 +1023,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!--Gallery Section end-->
 
   <!--Testimonials Section start-->
@@ -1349,12 +1349,7 @@
               </li>
               <li class="d-inline me-2">
                 <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                  <i class="fa fa-twitter"></i>
-                </a>
-              </li>
-              <li class="d-inline me-2">
-                <a class="d-inline-block rounded-circle bg-white  bg-opacity-25">
-                  <i class="fa fa-youtube-play"></i>
+                  <i class="fa fa-instagram"></i>
                 </a>
               </li>
               <li class="d-inline me-2">
