--- a/product-single.html
+++ b/product-single.html
@@ -87,7 +87,7 @@
         <div class="row">
           <div class="col-lg-2 col-md-6">
             <div class="navbar-brand m-0">
-              <img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100">
+              <a href="./"><img src="images/logo/Dealtoair_Logo.png" alt="Logo" class="w-100"></a>
             </div>
           </div>  
           <div class="col-lg-10 col-md-6">
